# over-the-prompt

./: .gitignore  CMakeLists.txt  README.md
include/otp/: command.h  map.h  mod.h  player.h  state.h  utility.h
include/otp/cmd/: go.h
include/otp/mods/: time.h
include/otp/utilities/: math.h  string.h
src/: main.cc
src/utilities/math/: vector.cc
src/utilities/string/: cases.cc
src/world/: player.cc  state.cc
src/world/cmd/go/: direction.cc  run.cc
src/world/mods/time/: id.cc  mod.cc  state.cc  time-point.cc
ui/include/otp/: home.hpp  screens.hpp
